<resources>
    <string name="app_name">ChallengeDay5-Project7-UPDATE-BuildTriviaApp</string>
    <string name="trivia_app_title">Trivia App</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="trueButton">True</string>
    <string name="falseButton">False</string>
    <string name="_0_out_of_100">0 out of 100</string>
    <string name="current_score">Current Score :</string>
    <string name="high_score">High Score :</string>
</resources>
